# test-task

./: .gitignore  CMakeLists.txt  README.md  main.cpp  myconfig  task_Svitla.cpp
build_l/: findContigReg
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _converter_8cpp.html  _converter_8cpp_source.html  _converter_8h.html  _converter_8h_source.html  _r_e_a_d_m_e_8md.html  _visualizer_8cpp.html  _visualizer_8cpp_source.html  _visualizer_8h.html  _visualizer_8h_source.html  annotated.html  class_converter-members.html  class_converter.html  class_visualizer-members.html  class_visualizer.html  classes.html  config_8h.html  config_8h_source.html  dir_070a56164883fd6ee4154f2a59837e25.html  dir_49a9c4f49fc613f6eaface2077d5cb69.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f11b8958b9a5a8dd07312898797844b8.html  feature__tests_8c.html  feature__tests_8c_source.html  feature__tests_8cxx.html  feature__tests_8cxx_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  (+9 more)
docs/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _converter_8cpp.tex  _converter_8h.tex  _visualizer_8cpp.tex  _visualizer_8h.tex  annotated.tex  class_converter.tex  class_visualizer.tex  files.tex  (+14 more)
src/: Converter.cpp  Converter.h  Visualizer.cpp  Visualizer.h  config.h
(+26 files in other folders)
